client/app/center/center.css
/* ... */
.header-title-info__more {
  color:#9e9ea6;
  -webkit-transitionDISABLED:color .15s ease-out;
  -moz-transitionDISABLED:color .15s ease-out;
  -o-transitionDISABLED:color .15s ease-out;
  transitionDISABLED:color .15s ease-out;
  cursor:pointer;
  line-height: inherit;
  position: absolute;
  right: 0;
}
.header-title-info__more:hover {
  /*color: #000;*/
}
.header-title-info__dropdown {
}


.panel-title-member__more {
  position: relative;
  margin-left: 8px;
  font-size: 14px;
  color: #999999;
  cursor: pointer;
}
.panel-title-member__more:hover {
  color: #333;
}
.header-title-member__dropdown {
}



/* end of title */

.cpanel-home {
  position: relative;
  text-align: center;
  top: 30%;
}

.msgs {
  background: #fff;
  position: absolute;
  margin-right: 0;
  top: 35px;
  left: 0;
  right: 0;
  bottom: 50px;
  overflow: auto;
  min-width: 260px;
  padding-bottom: 0;
}
.msgs__loading.initial {
  position: absolute;
  top: 0;
  left: 0;
  right: 2px;
  bottom: 0;
  background-color: #fff;
  background-size: 100px 100px !important;
  z-index: 5;
}
.msgs-intro {
  padding: 1rem 1rem 1rem 1.5rem;
  margin: 1rem 0 0;
}
.msgs-holder {
  /*padding: 0 10px 0 20px;*/
}
.msgs-group {

}
.msgs-group__divider {
  background-color: #d7e0e8;
  border-radius: 3px;
  font-size: 12px;
  color: #192d3e;
  display: table;
  padding: 5px 6px;
  margin: 12px 0 15px 66px;
}
.msgs-group__divider-label {
  display: inline-block;
  padding-top: 4px;
  border-top: 3px solid #31c08a;
}
.msg-item {
  height: 100%;
  position: relative;
  /*padding: 0 20px 0 47px;*/
  padding: 0 30px 0 67px;
  margin-bottom: 15px;
}
.msgs-group:last-of-type > .msg-item {
  margin-bottom: 0;
  padding-bottom: 5px;
}
.msg-item.comment-title,
.msg-item.comment-continue{
  margin-bottom: 4px;
  margin-top: 4px !important;
}


.msg-item.text {
  margin-top: 13px;
}
.msg-item.text-child {
  margin-top: -15px;
}

.msg-item.file-upload {
  margin: 13px 0 15px;
}
.msg-item.comment_first,
.msg-item.comment_continue {
  margin-bottom: 8px;
}
.msg-item__action {
  display:none;
  position:absolute;
  right:-7px;
  bottom: 4px
}
.msg-item__action .action-icon {
  font-size: 16px;
  color: #c5c5c5;
}
.msg-item__action .action-icon:hover {
  color: #9a9a9a;
}

.msg-item:hover .msg-item__action {
  display:inline-block;
}
.msg-item-float {
  position: absolute;
  top: 0;
  left: 20px;
}
.msg-item-header {
  padding: 2px 0 5px;
  font-size: 15px;
  font-weight: 700;
  line-height: 1.3rem;
}
.msg-item-header .tooltip {
  width: 64px;
}

.msg-item.comment-continue .msg-item-header {
  padding: 0;
}

/* continued comment writer name */

.msg-comment .msg-comment-body .msg-item-header__name,
.msg-item.comment-continue .msg-item-header .msg-item-header__name {
  font-size: 14px;
  display: inline-block;
  vertical-align: top;
}

.msg-item-header__name {
  color: #333;
  font-weight: 700;
  font-size: 15px;
}
.continue-comment-body {
  font-size: 14px;
  font-weight: 400;
  display: inline-block;
  max-width: 100%;
  line-height: 1.6rem;
}
.continue-comment-body p {
  margin: 0;
}
.continue-comment-body .msg-hidden {
  visibility: hidden;
}
.msg-item-header__created {
  font-size: 10px;
  line-height: 10px;
  color: #666666;
  font-weight: 400;
  margin-left: 3px;
}
/* continued comment created time   */
.msg-item.comment-continue .msg-item-header .msg-item-header__created {
  padding-left: 5px;
}
.msg-item-body {
  position: relative;
}
.msg-item.comment-continue .msg-item-body {
  /*padding-left: 75px;*/
}

.msg-item-body .tooltip {
  width: 64px;
}

.msg-item-body p {
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  color: #333333;
}

.msg-text {
  word-wrap: break-word;
}

.msg-text-body {
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  color: #333333;
}


.msg-file { min-height: 65px; }
.msg-file-header {
  font-size: 16px;
  font-weight: 700;
}

/*
issue : JND-974
fix : add margin-bottom: 10px;
by ysyun 2015.2.25
*/
.msg-file-body-float {
  margin-right: 10px;
  margin-bottom: 10px;
  position: relative;
}
/* opac layer over image thumbnail  */
.msg-comment .msg-file-body-float::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: black;
  opacity: 0.4;
}
.msg-file-body-float .fa-comment {
  position: absolute;
  bottom: 11px;
  right: 11px;
  width: 15px;
  color: white;
  opacity: 0.8;
  /*z-index: 1;  center chat 영역 위에 출력되는 layout이 있을때 comment 이미지가 해당 layout을 침범함*/
  -ms-transform: scaleX(-1); /* IE 9 */
  -webkit-transform: scaleX(-1); /* Chrome, Safari, Opera */
  transform: scaleX(-1);
}
.large-thumbnail-parent.msg-file-body-float::before {
  display: none;
}
.msg-file-body-float > img {
  max-width: 100%;
}
.msg-file-body__img {
  height: 63px;
  width: 63px;
}
.preview-container .msg-file-body__img__background {
  max-width: 700px;
}
.msg-file-body__thumbnail {
  height: 65px;
  width: 65px;
  background-color: #f2f2f2;
  padding: 15px;
}

.large-thumbnail-parent {
  width: auto;
  height: auto;
  max-width: 700px;
  position: relative;
  overflow: hidden;
}
.large-thumbnail {
  max-width: 700px;
}
.preview-container:hover .large-thumbnail-full-screen {
  display: block;
  -webkit-animation: opacIn-from-0 1s; /* Chrome, Safari, Opera */
  animation: opacIn-from-0 1s;
}

.large-thumbnail-parent .fa-comment {
  display: none;
}

.large-thumbnail-full-screen {
  cursor: pointer;
  position: absolute;
  top: 10px;
  left: 10px;
  display: none;
  padding: 5px;
  background-color: #666666;
  border-radius: 5px;
  color: #e0e0e0;
}
.large-thumbnail-full-screen:hover {
  color: white;
}
.large-thumbnail-full-screen:active {
  margin-top: 1px;
  margin-right: -1px;
}

/*
issue : JND-974
fix : change min-height:65px to minheight:65px !important
by ysyun 2015.2.25
*/
.msg-file-meta {
  font-size: 12px;
  line-height: 1.3rem;
  padding-left: 75px;
  min-height: 65px !important;
}
/* ... */

